--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.12.2",
     "node-fetch": "^2.6.1",
+    "node-superfetch": "^0.2.3",
     "random-country": "^1.0.1"
   }
 }
