--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MolaiBOT",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon --watch ./index index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "mongoose": "^5.12.2",
     "node-fetch": "^2.6.1",
     "node-superfetch": "^0.2.3",
+    "nodemon": "^2.0.7",
     "random-country": "^1.0.1",
     "sourcebin-wrapper": "^1.6.0"
   }
