--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^12.5.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "glob": "^7.1.7",
     "https": "^1.0.0",
     "moment": "^2.29.1",
     "mongoose": "^5.12.2",
