--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "ascii-table": "0.0.9",
+    "discord-buttons": "^3.1.1",
     "discord.js": "^12.5.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
