--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"ascii-table": "0.0.9",
+		"dayjs": "^1.10.5",
 		"discord-buttons": "^3.1.1",
 		"discord.js": "^12.5.1",
 		"ejs": "^3.1.6",
@@ -39,6 +40,7 @@
 		"@models/blacklist": "./models/blacklisted-servers.js",
 		"@models/premium": "./models/premium.js",
 		"@models/marriages": "./models/marriages.js",
+		"@models/premium-guild": "./models/premium-guild.js",
 		"@inlineReplies": "./utils/inlinereplies.js"
 	},
 	"devDependencies": {
