--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"ascii-table": "0.0.9",
+		"child_process": "^1.0.2",
 		"dayjs": "^1.10.5",
 		"discord-buttons": "^3.1.1",
 		"discord.js": "^12.5.1",
