--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"child_process": "^1.0.2",
 		"dayjs": "^1.10.5",
 		"discord-buttons": "^3.1.1",
-		"discord.js": "^12.5.1",
+		"discord.js": "^13.0.0-dev.1ac9a2eb5bfef6d009de7c54d3fac5e3d4a5afdc",
 		"ejs": "^3.1.6",
 		"express": "^4.17.1",
 		"glob": "^7.1.7",
