--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
 		"child_process": "^1.0.2",
 		"dayjs": "^1.10.5",
 		"discord-buttons": "^3.1.1",
-		"discord.js": "^13.0.0-dev.a7c6678.1625427504",
+		"discord.js": "^13.1.0",
 		"ejs": "^3.1.6",
 		"glob": "^7.1.7",
 		"https": "^1.0.0",
+		"install": "^0.13.0",
 		"module-alias": "^2.2.2",
 		"moment": "^2.29.1",
 		"mongoose": "^5.12.2",
